# frappe-obe

./: .gitignore  CLAUDE.md  README.md  license.txt  pyproject.toml
obe/: api.py  attainment.py  hooks.py  patches.txt
obe/fixtures/: program_outcome.json
obe/obe/doctype/assessment/: assessment.js  assessment.json  assessment.py
obe/obe/doctype/assessment_mark/: assessment_mark.json  assessment_mark.py
obe/obe/doctype/assessment_question/: assessment_question.json  assessment_question.py
obe/obe/doctype/attainment_run/: attainment_run.js  attainment_run.json  attainment_run.py
obe/obe/doctype/co_attainment_row/: co_attainment_row.json  co_attainment_row.py
obe/obe/doctype/co_po_map/: co_po_map.json  co_po_map.py
obe/obe/doctype/course_outcome/: course_outcome.json  course_outcome.py
obe/obe/doctype/course_survey/: course_survey.js  course_survey.json  course_survey.py
obe/obe/doctype/obe_course/: obe_course.json  obe_course.py
obe/obe/doctype/obe_program/: obe_program.json  obe_program.py
obe/obe/doctype/obe_student/: obe_student.json  obe_student.py
obe/obe/doctype/po_attainment_row/: po_attainment_row.json  po_attainment_row.py
obe/obe/doctype/program_outcome/: program_outcome.json  program_outcome.py
obe/obe/doctype/rubric_band/: rubric_band.json  rubric_band.py
obe/obe/doctype/survey_rating/: survey_rating.json  survey_rating.py
obe/tests/: test_attainment.py
scripts/: gen_doctypes.py  seed_demo.py
