[project]
name = "obe"
authors = [{ name = "Acharya Patashala Educational Trust", email = "postmaster@apset.co.in" }]
description = "OBE / CO-PO attainment for NBA accreditation"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "obe"
